# uforce_knowledge_base_generator

./: .env.dist  .gitignore  config.py  database.py  knowledge_base_generator.py  logging_config.py  main.py  models.py  pyproject.toml  repository.py  schemas.py
src/: cli.py  config.py  constants.py  database.py  logging_config.py  models.py  repository.py  schemas.py
src/processors/: base.py  hr_sheet.py  mattermost.py  new_teamly.py  teamly.py
src/utils/: datetime_utils.py  gdrive_utils.py  gsheets_utils.py
