[project]
name = "uforce-knowledge-base-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "google-api-python-client>=2.181.0",
    "google-auth-oauthlib>=1.2.2",
    "markdown>=3.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.2",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.17.1",
    "sqlalchemy-stubs>=0.4",
    "types-html5lib>=1.1.11.20250809",
    "types-markdown>=3.9.0.20250906",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
